kubernetes/api_deployment_and_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: api
          image: merlachandra/devops-assignment_api
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
