kubernetes/proxy_deployment_and_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: proxy
          image: merlachandra/devops-assignment_proxy
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: LoadBalancer
